--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head> </head>
+<head>
+  <script>
+  window.targetGlobalSettings = {  
+   cookieDomain: '.github.io'
+};
+    </script>
+ <script src="https://assets.adobedtm.com/35066b6d6803/9967ff8d2a4a/launch-d31833bc27c0-development.min.js" async></script>
+  </head>
 <body>
 <h1>Sample Test Page</h1>
 </body>
